--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 
-# Configuração do projeto
+# Configuraï¿½ï¿½o do projeto
 server.port=8080
 spring.application.name=estoque
 
-# Configuração do MySQL
+# Configuraï¿½ï¿½o do postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/estoque
 spring.datasource.username=postgres
 spring.datasource.password=36217900
 
-# Configuração do Hibernate
+# Configuraï¿½ï¿½o do Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
-#spring.main.allow-circular-references = true
+spring.main.allow-circular-references = true
