--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 
-# Configuraï¿½ï¿½o do projeto
+# onfiguração do projeto
 server.port=8080
 spring.application.name=estoque
 
-# Configuraï¿½ï¿½o do postgres
+# Configuração do postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/estoque
 spring.datasource.username=postgres
 spring.datasource.password=36217900
 
-# Configuraï¿½ï¿½o do Hibernate
+
+# Configuração do Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
