--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -75,7 +75,10 @@
 			<artifactId>spring-data-jpa</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
