--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-# onfiguração do projeto
-server.port=50060
+# Configuração do projeto
+server.port=8080
 spring.application.name=estoque
 
 # Configuração do postgres
